# EvLamp

./: .gitignore  .gitmodules  API.md  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig.defaults
components/button/: button.c  button.h
components/libcurl/curl/lib/: curl_config.h  curl_config.h.cmake
components/libnsgif/: CMakeLists.txt  component.mk
components/libnsgif/utils/: log.h
components/mustach/: CMakeLists.txt  mustach-cjson.c  mustach-cjson.h  mustach-wrap.c  mustach-wrap.h
files/ota/: ota_server_cert.pem
files/web/: index.html  styles.css
hardware/: evlamp.kicad_pcb  evlamp.kicad_prl  evlamp.kicad_pro  evlamp.kicad_sch  fp-lib-table
hardware/esp32.pretty/: ESP32-DEVKITC.kicad_mod
hardware/gerber/: evlamp-B_Cu.gbl  evlamp-B_Mask.gbs  evlamp-B_Paste.gbp  evlamp-B_Silkscreen.gbo  evlamp-Edge_Cuts.gm1  evlamp-F_Cu.gtl  evlamp-F_Mask.gts  evlamp-F_Paste.gtp  evlamp-F_Silkscreen.gto  evlamp-NPTH-drl_map.gbr  evlamp-NPTH.drl  evlamp-PTH-drl_map.gbr  evlamp-PTH.drl
main/: CMakeLists.txt  Kconfig.projbuild  api.c  api.h  bus.c  bus.h  common.c  common.h  config.h  effect.c  effect.h  embed.h  input.c  input.h  main.c  ota.c  ota.h  palettes.c  palettes.h  settings.c  settings.h  surface.c  surface.h  templates.h  utils.c  utils.h  webserver.c  webserver.h  wifi.c  wifi.h
main/effects/: colors.c  colors.h  crazybees.c  crazybees.h  diagonals.c  diagonals.h  dna.c  dna.h  dunes.c  dunes.h  fire.c  fire.h  fireflies.c  fireflies.h  flower.c  flower.h  gif.c  gif.h  holiday.c  holiday.h  hoop.c  hoop.h  lamp.c  lamp.h  lava.c  lava.h  matrix.c  matrix.h  metaballs.c  metaballs.h  nuclear.c  nuclear.h  octopus.c  octopus.h  peacock.c  peacock.h  plasma_waves.c  plasma_waves.h  polar_lights.c  polar_lights.h  (+28 more)
main/templates/: wifi_done.tpl
main/web/: index.html  jquery-ui.css  jquery-ui.js  jquery-ui.structure.css  jquery-ui.theme.css  styles.css
res/: index.html
res/mustach/: AUTHORS  README.md  mustach.c  mustach.h
res/tpl/: header.tpl  wifi_form.tpl
